[gd_scene load_steps=3 format=3 uid="uid://bge7qat5yefi6"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_gpi74"]
[ext_resource type="Theme" uid="uid://qn7tl5qk8skf" path="res://Asset/menu/menu.tres" id="2_2dpsd"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_gpi74")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="MainMenu" type="HBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme = ExtResource("2_2dpsd")
alignment = 1

[node name="CenterMenu" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40
alignment = 2

[node name="Nouveau jeu" type="Button" parent="MainMenu/CenterMenu"]
layout_mode = 2
text = "Nouvelle partie"

[node name="Niveaux" type="Button" parent="MainMenu/CenterMenu"]
layout_mode = 2
text = "Selection de niveau
"

[node name="Options" type="Button" parent="MainMenu/CenterMenu"]
layout_mode = 2
text = "Options"

[node name="Quitter" type="Button" parent="MainMenu/CenterMenu"]
layout_mode = 2
text = "Quitter"

[connection signal="pressed" from="MainMenu/CenterMenu/Quitter" to="." method="_on_quitter_pressed"]
